--- a/recaps-web/package.json
+++ b/recaps-web/package.json
@@ -21,7 +21,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.9.0",
-    "lodash": "4.17.20",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.26.0",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -32,14 +33,14 @@
     "react-toastify": "^9.1.3",
     "redux-actions": "^3.0.0",
     "redux-saga": "^1.2.3",
-    "sass": "^1.59.3",
-    "typescript": "5.0.2",
+    "sass": "^1.62.1",
+    "typescript": "5.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.150",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
     "@types/react-dom": "18.0.11",
     "@types/react-select": "^5.0.1",
     "@types/redux-actions": "^2.6.2"
